--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ LOCAL_DATABASE_HOST=localhost
 LOCAL_PHPMYADMIN_USERNAME=root
 LOCAL_PHPMYADMIN_PASSWORD=14231423
 LOCAL_PHPMYADMIN_DATABASE_NAME=avanti
+PORT=5555
